# server

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.simple  README.md  debug_railway.py  main.py  pyproject.toml  requirements.txt  run_dev.py  run_prod.py  test_redirect.py  test_server.py
